# ccmas-python-cli

./: .gitignore  README-cn.md  README.md  pyproject.toml
docs/: README.md  agent_system.md  architecture.md  configuration.md  context_isolation.md  examples.md  installation.md  llm_integration.md  query_loop.md  tool_system.md  usage.md
docs/examples/: basic_usage.py  custom_agent.py  multi_agent.py
src/ccmas/: __init__.py  __main__.py
src/ccmas/agent/: __init__.py  agent_tool.py  definition.py  fork_subagent.py  loader.py  run_agent.py
src/ccmas/agent/builtin/: __init__.py  fork_agent.py  general_purpose.py  plan_agent.py  verification_agent.py
src/ccmas/cli/: __init__.py  commands.py  config.py  main.py  ui.py
src/ccmas/context/: __init__.py  agent_context.py  subagent_context.py  teammate_context.py
src/ccmas/coordinator/: __init__.py  coordinator_mode.py
src/ccmas/hooks/: __init__.py  integration.py  manager.py
src/ccmas/llm/: __init__.py  client.py  ollama.py  openai.py  vllm.py
src/ccmas/memory/: __init__.py  loader.py  project_state.py  session.py  state_manager.py  summarizer.py  template.py  types.py
src/ccmas/permission/: __init__.py  bubble.py  checker.py  mode.py
src/ccmas/prompt/: __init__.py  agent.py  system.py  tools.py
src/ccmas/query/: __init__.py  compact.py  loop.py  message_builder.py  summarizer.py  token_budget.py  tool_executor.py
src/ccmas/skill/: __init__.py  commands.py  manager.py  tool.py
src/ccmas/teammate/: __init__.py  in_process.py  mailbox.py  send_message.py  spawn.py  tmux.py
src/ccmas/tool/: __init__.py  base.py  registry.py
src/ccmas/tool/builtin/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
src/ccmas/types/: __init__.py  agent.py  message.py  tool.py
